--- a/guide/html/convention_noti.html
+++ b/guide/html/convention_noti.html
@@ -2,8 +2,8 @@
     <h3>Pub. reporting</h3>
     <ul>
         <li>홑따옴표(css) 쌍따옴표(html, script) 정의</li>
-        <li>&lt;!-- [2022.00.00] 수정 --&gt;</li>
-        <li>&lt;!--// [2022.00.00] 수정 --&gt;</li>
+        <li>&lt;!-- 👋2022.00.00 --&gt;</li>
+        <li>&lt;!--// 👋2022.00.00 --&gt;</li>
         <li>
             <ol>css --vars<br>
                 <li>--font-Noto: "notoSans";</li>
@@ -11,16 +11,16 @@
                 <li>--size-base: 1rem;</li>
                 <li>--size-large: 1.25rem;</li>
                 <li>--size-huge: 2rem;</li>
-                <li>--emp-st: #e30000;</li>
-                <li>--emp-nd: #00f;</li>
-                <li>--emp-rd: #179d46;</li>
+                <li>--emp-increase: #e30000;</li>
+                <li>--emp-decrease: #00f;</li>
                 <li>--emp-white: #fff;</li>
                 <li>--emp-black: #000;</li>
-                <li>--emp-gray-dark: #999;</li>
-                <li>--emp-gray-light: #aaa;</li>
+                <li>--emp-999: #999;</li>
+                <li>--emp-aaa: #aaa;</li>
                 <li>--shadow-fire: 0 4px 12px 4px rgba(227, 0, 0, 0.2), 0 1px 3px 0 rgba(137, 7, 7, 0.4);</li>
                 <li>--time-nav-hover: 0.25s;</li>
-                <li>--focus-style: dotted 2px var(--color-black);</li>
+                <li>--focus-style-dot: dotted 2px var(--color-black);</li>
+                <li>--focus-style-ring: dotted 2px var(--color-black);</li>
                 <li>--focus-offset: 2px;</li>
                 <li>--space-gap-lv1: 40px;</li>
                 <li>--space-gap-lv2: 30px;</li>
