--- a/guide/html/module_menu.html
+++ b/guide/html/module_menu.html
@@ -56,6 +56,28 @@
                                         <div class="tab-ele">다섯번째 영역</div>
                                     </div>
                                 </div>
+
+                                <div data-role="tab" data-show="3" class="tabs01">
+                                    <ul class="area-tab-mnu">
+                                        <li><a href="#">연혁</a></li>
+                                        <li><a href="#"><span>인사말</span></a></li>
+                                        <li><a href="#"><i>가치경영체계</i></a></li>
+                                        <li><a href="#">Organization chart</a></li>
+                                        <li><a href="#">신한금융그룹</a></li>
+                                        <li><a href="#">연혁</a></li>
+                                        <li><a href="#"><span>인사말</span></a></li>
+                                        <li><a href="#"><i>가치경영체계</i></a></li>
+                                        <li><a href="#">Organization chart</a></li>
+                                        <li><a href="#">신한금융그룹</a></li>
+                                    </ul>
+                                    <div class="area-tab-cont">
+                                        <div class="tab-ele">첫번째 영역</div>
+                                        <div class="tab-ele">두번째 영역</div>
+                                        <div class="tab-ele"><i>세번째 영역</i></div>
+                                        <div class="tab-ele"><span>네번째 영역</span></div>
+                                        <div class="tab-ele">다섯번째 영역</div>
+                                    </div>
+                                </div>
                                 <!-- 
                                     다른방식의 탭메뉴 형태
                                     https://www.w3.org/TR/wai-aria-practices-1.1/examples/tabs/tabs-1/tabs.html 
