--- a/html/ini.html
+++ b/html/ini.html
@@ -1,48 +1,39 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ko" xml:lang="ko">
-  <head>
+
+<head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="title" content="신한저축은행" />
-    <meta
-      name="description"
-      content="신한저축은행, 고객을 웃음짓게 하는 저축은행"
-    />
-    <meta
-      name="keywords"
-      content="고객이 행복하고 따뜻한 금융세상을 만들겠습니다!"
-    />
-    <link
-      rel="favicon shortcut icon"
-      href="/img/favicon.ico"
-      type="image/x-icon"
-    />
+    <meta name="description" content="신한저축은행, 고객을 웃음짓게 하는 저축은행" />
+    <meta name="keywords" content="고객이 행복하고 따뜻한 금융세상을 만들겠습니다!" />
+    <link rel="favicon shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 
     <link href="../../css/ini.min.css" rel="stylesheet" />
     <link href="../../css/module.css" rel="stylesheet" />
     <link href="../../css/contents.css" rel="stylesheet" />
     <title>guide</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <div data-role="wrap" class="wrap">
-      <div id="acc-skip">
-        <a href="#content">본문 바로가기</a>
-      </div>
-      <div data-role="page">
-        <header data-role="header" data-position="top">
-          <div>topper</div>
-          <nav>nav</nav>
-        </header>
+        <div id="acc-skip">
+            <a href="#content">본문 바로가기</a>
+        </div>
+        <div data-role="page">
+            <header data-role="header" data-position="top">
+                <div>topper</div>
+                <nav>nav</nav>
+            </header>
 
-        <div data-role="content" id="content">content</div>
+            <div data-role="content" id="content">
+                content
+                <!-- 👋 2022.03.11 -->
+            </div>
 
-        <footer data-role="footer" data-position="bottom">footer</footer>
-      </div>
+            <footer data-role="footer" data-position="bottom">footer</footer>
+        </div>
     </div>
 
     <div data-role="modal"></div>
@@ -50,9 +41,10 @@
     <script src="../../js/jquery-3.3.1.min.js"></script>
     <script src="../../js/ui.js"></script>
     <script>
-      $(function () {
-        // page script
-      });
+        $(function() {
+            // page script
+        });
     </script>
-  </body>
+</body>
+
 </html>
