--- a/guide/html/module_form.html
+++ b/guide/html/module_form.html
@@ -79,6 +79,10 @@
                                         <label for="tempChkA06">단독으로 체크박스가 있는 경우의 줄바꿈시<br>정렬은 디자인 정의후 작업예정</label>
                                     </div>
                                 </div>
+                                <div class="chk by-reverse" style="margin:10px 0; background-color:efefef;">
+                                    <input type="checkbox" id="tempChkR01">
+                                    <label for="tempChkR01">[필수] 약관동의 체크박스가 오른쪽</label>
+                                </div>
                                 <div class="exp">
                                     <h3>code pattern</h3>
                                     <pre class="brush: xhtml; gutter: false; toolbar:false;">
