--- a/guide/html/module_table.html
+++ b/guide/html/module_table.html
@@ -178,7 +178,7 @@
                                 <h3>Screen Rendering</h3>
                                 <div data-role="table" data-stand="right">
                                     <table>
-                                        <caption>내가 입력한 캡션이 최우선으로 적용</caption>
+                                        <caption class="fixed">내가 입력한 캡션이 최우선으로 적용</caption>
                                         <tbody>
                                             <tr>
                                                 <th scope="col">미인을</th>
