--- a/guide/html/module_table.html
+++ b/guide/html/module_table.html
@@ -50,18 +50,17 @@
                 <h3 class="tit"></h3>
                 <section>
                     <article>
-                        <h2>[ACC.] table caption</h2>
+                        <h2>table caption</h2>
                         <section>
                             <ul class="scr">
-                                <li>정보성 테이블코드에 <em>data-role='table'이 랩핑되면</em> 접근성고려하여 헤더셀의 정보를 &lt;p id="tableSeq[X]"&gt;자동생성</li>
-                                <li>정보성 테이블태그에는 aria-description의 아이디를 자동부며, 캡쳐태그 연결시킴</li>
+                                <li>정보성 테이블코드에 <em>data-role='table'이 랩핑되면</em> 접근성고려하여 헤더셀의 정보를 &lt;table id="tableSeq[X]"&gt;자동생성</li>
+                                <li>테이블태그의 aria-describedby와 캡션의 id를 자동연결</li>
+                                <li><em>data-role="table-subject"</em>을 적용하면 해더셀의 정보에 추가적인 제목([테이블의 헤더셀][등의 정보를 제공]하는 [테이블의 제목]안내)을 덧붙여 캡션을 구성</li>
+                                <li>캡션태그의 명시적인 선언(<em>.fixed</em>)을 최우선으로 함.</li>
                                 <li>테이블의 정렬성격에 따라 <em>data-stand="[center|right]"</em>를 지정</li>
                                 <li>정렬의 기본은 헤더셀은 가운데, 테이터셀은 왼쪽이며 <em>각셀마다 stand-[left|center|right] 개별클래스 적용</em></li>
-                                <li>캡션태그는 스크립트에서 자동생성하며 명시적인 선언을 최우선으로 함.</li>
-                                <li><em>data-role="table-subject"</em>을 적용하면 해더셀의 정보에 추가적인 제목([테이블의 헤더셀][등의 정보를 제공]하는 [테이블의 제목]안내)을 덧붙여 캡션을 구성</li>
                                 <li>타이틀영역의 우측의 해드노트와 테이블의 하단의 풋노트영역은 필요시 추가</li>
-                                <li>자유도가 있는 테이블의 생성이 필요한 경우에 따라 테이블에 클래스적용 가능</li>
-                                <li>동적으로 생성된 경우는 <em>SHS.tblSummary()</em></li>
+                                <li>동적인 테이블의 캡션재적용 <em>SHS.tblSummary()</em>재선언 필요</li>
                             </ul>
 
                             <div class="rendering">
@@ -181,13 +180,13 @@
                                         <caption class="fixed">내가 입력한 캡션이 최우선으로 적용</caption>
                                         <tbody>
                                             <tr>
-                                                <th scope="col">미인을</th>
+                                                <th scope="row">미인을</th>
                                                 <td>새</td>
                                                 <td>무엇이</td>
                                                 <td>보는</td>
                                             </tr>
                                             <tr>
-                                                <th scope="col">기본 우측정렬</th>
+                                                <th scope="row">기본 우측정렬</th>
                                                 <td>data-stand="right"</td>
                                                 <td>33.3 %</td>
                                                 <td>10,000 원</td>
@@ -198,19 +197,19 @@
                             </div>
                             <div class="exp">
                                 <h3>code pattern</h3>
-                                <pre class="brush: xhtml; gutter: false; toolbar:false">
+                                <pre class="brush: xhtml; gutter: false; toolbar:false; highlight:[3]">
                                     &lt;div data-role="table" data-stand="right">
                                         &lt;table>
-                                            &lt;caption>내가 입력한 캡션이 최우선으로 적용&lt;/caption>
+                                            &lt;caption class="fixed">내가 입력한 캡션이 최우선으로 적용&lt;/caption>
                                             &lt;tbody>
                                                 &lt;tr>
-                                                    &lt;th scope="col">&lt;/th>
+                                                    &lt;th scope="row">&lt;/th>
                                                     &lt;td>&lt;/td>
                                                     &lt;td>&lt;/td>
                                                     &lt;td>&lt;/td>
                                                 &lt;/tr>
                                                 &lt;tr>
-                                                    &lt;th scope="col">기본 우측정렬&lt;/th>
+                                                    &lt;th scope="row">기본 우측정렬&lt;/th>
                                                     &lt;td>data-stand="right"&lt;/td>
                                                     &lt;td>33.3 %&lt;/td>
                                                     &lt;td>10,000 원&lt;/td>
@@ -244,3 +243,16 @@
 </body>
 
 </html>
+
+
+<div class="aaa">
+    <span aria-hidden="true"><span 현재></span><em>9</em></emn>/7</span>
+</div>
+
+.attr("aria-label", as+"단계중"+ㅁㅁ+"단계);
+
+
+<div>
+    <div label="sjdakhda"> </div>
+
+</div>
