--- a/guide/html/convention_noti.html
+++ b/guide/html/convention_noti.html
@@ -5,6 +5,11 @@
         <li>&lt;!-- 👋2022.00.00 --&gt;</li>
         <li>&lt;!--// 👋2022.00.00 --&gt;</li>
         <li>
+            <p>Normally, only aria-live="polite" is used.</p>
+            <p>aria-live="assertive" should only be used for time-sensitive/critical notifications</p>
+            <p>role="progressbar"</p>
+        </li>
+        <li>
             <ol>css --vars<br>
                 <li>--font-Noto: "notoSans";</li>
                 <li>--size-small: 0.75rem;</li>
