--- a/guide/html/module_table.html
+++ b/guide/html/module_table.html
@@ -177,7 +177,7 @@
                                 <h3>Screen Rendering</h3>
                                 <div data-role="table" data-stand="right">
                                     <table>
-                                        <caption class="fixed">내가 입력한 캡션이 최우선으로 적용</caption>
+                                        <caption class="fixed">입력한 캡션이 최우선으로 적용</caption>
                                         <tbody>
                                             <tr>
                                                 <th scope="row">미인을</th>
@@ -200,7 +200,7 @@
                                 <pre class="brush: xhtml; gutter: false; toolbar:false; highlight:[3]">
                                     &lt;div data-role="table" data-stand="right">
                                         &lt;table>
-                                            &lt;caption class="fixed">내가 입력한 캡션이 최우선으로 적용&lt;/caption>
+                                            &lt;caption class="fixed">입력한 캡션이 최우선으로 적용&lt;/caption>
                                             &lt;tbody>
                                                 &lt;tr>
                                                     &lt;th scope="row">&lt;/th>
