--- a/guide/html/module_etc.html
+++ b/guide/html/module_etc.html
@@ -433,7 +433,7 @@
                             </div>
                         </section>
 
-                        <h2>module ... box</h2>
+                        <h2>count test...</h2>
                         <section>
                             <ul class="scr">
                                 <li></li>
@@ -533,6 +533,34 @@
                                 <div>
                                 ...
                                 </div>
+                                </pre>
+                            </div>
+                        </section>
+
+                        <h2>module...</h2>
+                        <section>
+                            <ul class="scr">
+                            </ul>
+                            <div class="rendering">
+                            </div>
+                            <div class="exp">
+                                <h3>code pattern</h3>
+                                <pre class="brush: js; gutter: false; toolbar:false">
+                                    ...
+                                </pre>
+                            </div>
+                        </section>
+
+                        <h2>module...</h2>
+                        <section>
+                            <ul class="scr">
+                            </ul>
+                            <div class="rendering">
+                            </div>
+                            <div class="exp">
+                                <h3>code pattern</h3>
+                                <pre class="brush: js; gutter: false; toolbar:false">
+                                    ...
                                 </pre>
                             </div>
                         </section>
