--- a/guide/html/convention_noti.html
+++ b/guide/html/convention_noti.html
@@ -1,6 +1,8 @@
 <div class="box-cont">
     <h3>Pub. reporting</h3>
     <ul>
+        <li>
+            약관 전체동의에서 각각의 리스트의 체크박스와 우측의 화살표가 공존할 경우 링크개별처리</li>
         <li>홑따옴표(css) 쌍따옴표(html, script) 정의</li>
         <li>&lt;!-- 👋2022.00.00 --&gt;</li>
         <li>&lt;!--// 👋2022.00.00 --&gt;</li>
@@ -16,16 +18,17 @@
                 <li>--size-base: 1rem;</li>
                 <li>--size-large: 1.25rem;</li>
                 <li>--size-huge: 2rem;</li>
+                <li>--time-hover: 0.25s;</li>
                 <li>--emp-increase: #e30000;</li>
                 <li>--emp-decrease: #00f;</li>
                 <li>--emp-white: #fff;</li>
                 <li>--emp-black: #000;</li>
                 <li>--emp-999: #999;</li>
                 <li>--emp-aaa: #aaa;</li>
-                <li>--shadow-fire: 0 4px 12px 4px rgba(227, 0, 0, 0.2), 0 1px 3px 0 rgba(137, 7, 7, 0.4);</li>
-                <li>--time-nav-hover: 0.25s;</li>
-                <li>--focus-style-dot: dotted 2px var(--color-black);</li>
-                <li>--focus-style-ring: dotted 2px var(--color-black);</li>
+                <li>--focus-dot: dotted 2px var(--emp-black);</li>
+                <li>--focus-ring: auto -webkit-focus-ring-color;</li>
+                <li>--focus-shadow: -webkit-box-shadow: 0 0 0 2px #000;</li>
+                <li>--shadow-multi: 0 4px 12px 4px rgba(226, 226, 226, 0.2), 0 1px 3px 0 rgba(133, 133, 133, 0.4);</li>
                 <li>--focus-offset: 2px;</li>
                 <li>--space-gap-lv1: 40px;</li>
                 <li>--space-gap-lv2: 30px;</li>
