--- a/guide/html/module_etc.html
+++ b/guide/html/module_etc.html
@@ -27,7 +27,7 @@
 
 <body>
     <div class="test-looping">...</div>
-    <div class="guide">
+    <div class="guide" data-role="wrap">
         <div class="guide-cont-wrap">
             <div class="guide-gnb">
                 <h2>guide</h2>
