--- a/guide/html/module_form.html
+++ b/guide/html/module_form.html
@@ -79,6 +79,13 @@
                                         <label for="tempChkA06">단독으로 체크박스가 있는 경우의 줄바꿈시<br>정렬은 디자인 정의후 작업예정</label>
                                     </div>
                                 </div>
+                                <div class="chk-group" style="margin-top:10px">
+                                    <div class="chk">
+                                        <input type="checkbox" id="tempChkA09">
+                                        <label for="tempChkA09">단독으로 체크박스가 있는 경우의 줄바꿈시<br>정렬은 디자인 정의후 작업예정</label>
+                                    </div>
+                                    <button class="chk-aside" style="padding:10px; border:1px solid #ccc">버튼</button>
+                                </div>
                                 <div class="chk by-reverse" style="margin:10px 0; background-color:efefef;">
                                     <input type="checkbox" id="tempChkR01">
                                     <label for="tempChkR01">[필수] 약관동의 체크박스가 오른쪽</label>
