--- a/guide/html/module_table.html
+++ b/guide/html/module_table.html
@@ -54,6 +54,7 @@
                         <section>
                             <ul class="scr">
                                 <li>정보성 테이블코드에 <em>data-role='table'이 랩핑되면</em> 접근성고려하여 헤더셀의 정보를 &lt;table id="tableSeq[X]"&gt;자동생성</li>
+                                <li>data-role='table'에 테이블의 기본 css 스타일을 적용하며, 상이한 디자인은 클래스를 추가해서 정의</li>
                                 <li>테이블태그의 aria-describedby와 캡션의 id를 자동연결</li>
                                 <li><em>data-role="table-subject"</em>을 적용하면 해더셀의 정보에 추가적인 제목([테이블의 헤더셀][등의 정보를 제공]하는 [테이블의 제목]안내)을 덧붙여 캡션을 구성</li>
                                 <li>캡션태그의 명시적인 선언(<em>.fixed</em>)을 최우선으로 함.</li>
