--- a/guide/html/convention_ia.html
+++ b/guide/html/convention_ia.html
@@ -266,21 +266,20 @@
                         <!-- <h2>Information Architecture</h2> -->
                         <div class="as-tab">
                             <ul class="ia-tab area-tab-mnu flexible">
-                                <li><a href="#" class="shot">예시</a></li>
-                                <li><a href="#">메뉴2</a></li>
-                                <li><a href="#">메뉴3</a></li>
-                                <li><a href="#">메뉴4</a></li>
-                                <li><a href="#">메뉴5</a></li>
-                                <li><a href="#">메뉴6</a></li>
-                                <li><a href="#">메뉴7</a></li>
-                                <li><a href="#">메뉴8</a></li>
-                                <li><a href="#">메뉴9</a></li>
-                                <li><a href="#">메뉴10</a></li>
+                                <li><a href="#">예시</a></li>
+                                <li><a href="#" class="shot">메인&공통</a></li>
+                                <li><a href="#">멤버쉽</a></li>
+                                <li><a href="#">대출 상품안내/신청/조회.관리</a></li>
+                                <li><a href="#">고객센터</a></li>
+                                <li><a href="#">이벤트</a></li>
+                                <li><a href="#">은행소개</a></li>
+                                <li><a href="#">렌딩-mo</a></li>
+                                <li><a href="#">렌딩-pc</a></li>
                             </ul>
                             <div class="tab-inner area-tab-cont">
-                                <span style="float: left; margin-top: 15px"> 
+                                <!-- <span style="float: left; margin-top: 15px"> 
                                     <span class="mod" style="vertical-align: middle; margin-top: -2px">수정</span>
-                                </span>
+                                </span> -->
                                 <!--  -->
                                 <div class="frt_tbl01 frt_tbl tab-ele"></div>
 
@@ -304,12 +303,6 @@
 
                                 <!--  -->
                                 <div class="frt_tbl08 frt_tbl tab-ele"></div>
-
-                                <!--  -->
-                                <div class="frt_tbl09 frt_tbl tab-ele"></div>
-
-                                <!--  -->
-                                <div class="frt_tbl10 frt_tbl tab-ele"></div>
 
                                 <!-- mobile quick view -->
                                 <div class="mobile-frame">
