--- a/html/ini3.html
+++ b/html/ini3.html
@@ -125,7 +125,7 @@
                     a11y: {
                         prevSlideMessage: '이전 슬라이드',
                         nextSlideMessage: '다음 슬라이드',
-                        slideLabelMessage: '{{index}}번째 입니다.',
+                        /* slideLabelMessage: '{{index}}번째 입니다.', */
                         paginationBulletMessage: '{{slidesLength}}개의 슬라이드 중 {{index}}번째 입니다.',
                     },
                     breakpoints: {
