--- a/guide/html/convention_noti.html
+++ b/guide/html/convention_noti.html
@@ -1,6 +1,13 @@
 <div class="box-cont">
     <h3>Pub. reporting</h3>
     <ul>
+        <li>스와이프 관련 접근성코드 삽입필요</li>
+        <li>
+            <strong style="display:block">달력 플러그인</strong>
+            <p>👍🏻[pickadate.js-master] mobile friendly / 날짜, 시간선택가능하며, 날짜는 화살표로 이동, 이전달, 다음달 키보드접근 안됨(모바일음성테스트 미진행)</p>
+            <p>🖐🏻[datetimepicker-master] 날짜만 포커스가 이동됨</p>
+            <p>🖐🏻[rolldate-master] 접근성 거의 안됨</p>
+        </li>
         <li>
             약관 전체동의에서 각각의 리스트의 체크박스와 우측의 화살표가 공존할 경우 링크개별처리</li>
         <li>홑따옴표(css) 쌍따옴표(html, script) 정의</li>
