--- a/guide/html/layout_main.html
+++ b/guide/html/layout_main.html
@@ -80,7 +80,7 @@
                                 <div class="layout-guide">
                                     <strong>body</strong>
                                     <div class="block">
-                                        <strong style="color:var(--emp-st)">data-role=wrap</strong>
+                                        <strong style="color:var(--emp-increase)">data-role=wrap</strong>
                                         <div class="block">
                                             <strong>data-role="page"</strong>
                                             <div class="block">
@@ -95,7 +95,7 @@
                                         </div>
                                     </div>
                                     <div class="block">
-                                        <strong style="color:var(--emp-nd)">data-role="modal"</strong>
+                                        <strong style="color:var(--emp-decrease)">data-role="modal"</strong>
                                     </div>
                                 </div>
                             </div>
