--- a/guide/html/layout_sub.html
+++ b/guide/html/layout_sub.html
@@ -82,7 +82,7 @@
                                     <div class="block">
                                         <strong>data-role=wrap</strong>
                                         <div class="block">
-                                            <strong style="color:var(--emp-st)">data-role="page"</strong>
+                                            <strong style="color:var(--emp-increase)">data-role="page"</strong>
                                             <div class="block">
                                                 <strong>data-role="header" data-position="top"</strong>
                                             </div>
@@ -100,7 +100,7 @@
                                         </div>
                                     </div>
                                     <div class="block">
-                                        <strong style="color:var(--emp-nd)">data-role="modal"</strong>
+                                        <strong style="color:var(--emp-decrease)">data-role="modal"</strong>
                                     </div>
                                 </div>
 
