--- a/html/ini3.html
+++ b/html/ini3.html
@@ -125,11 +125,12 @@
                         slideLabelMessage: '{{slidesLength}}개의 슬라이드 중 {{index}}번째 입니다.',
                         /* paginationBulletMessage: '{{slidesLength}}개의 슬라이드 중 {{index}}번째 입니다.', */
                     },
-                    breakpoints: {
+                    /* breakpoints: {
                         480: {
                             spaceBetween: 20,
+                            slidesPerView: 1,
                         }
-                    },
+                    }, */
                 });
                 // re autoplay
                 document.addEventListener('touchmove', () => {
