--- a/guide/html/module_form.html
+++ b/guide/html/module_form.html
@@ -316,6 +316,15 @@
                             <div class="rendering">
                                 <h3>Screen Rendering</h3>
                                 <div class="guide-space">
+
+                                    <div class="ipt-unit">
+                                        <input type="text" class="ipt ipt-string align-right">
+                                        <span class="unit">원</span>
+                                    </div>
+                                    <div class="ipt-valid">
+                                        <input type="text" class="ipt ipt-string" placeholder="플레이스홀더">
+                                        <button type="button" class="ipt-del">입력내용 삭제</button>
+                                    </div>
                                     <input type="text" class="ipt" data-state>
                                     <input type="text" class="ipt" data-state="success">
                                     <input type="text" class="ipt" data-state="fail">
