--- a/guide/html/plug_plugin.html
+++ b/guide/html/plug_plugin.html
@@ -9,8 +9,11 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <title>guide</title>
+    <link href="../../css/ini.min.css" rel="stylesheet">
+    <link href="../../css/module.css" rel="stylesheet">
     <link href="../../css/contents.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
+    <link href="../../css/swiper.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css"> -->
     <link href="../plugin/syntaxhighlighter_3.0.83/styles/shCore.css" rel="stylesheet">
     <link href="../plugin/syntaxhighlighter_3.0.83/styles/shThemeRDark.css" rel="stylesheet">
     <style>
@@ -653,70 +656,12 @@
                             </ul>
                             <div class="rendering">
                                 <h3>Screen Rendering</h3>
-                                <!-- Swiper -->
-                                <div class="swiper-container">
-                                    <ul class="swiper-wrapper tabs">
-                                        <li class="swiper-slide active"><a href="#">0000</a></li>
-                                        <li class="swiper-slide"><a href="#">1111</a></li>
-                                        <li class="swiper-slide"><a href="#">222222222</a></li>
-                                        <li class="swiper-slide"><a href="#">333</a></li>
-                                        <li class="swiper-slide"><a href="#">444</a></li>
-                                        <li class="swiper-slide"><a href="#">5555</a></li>
-                                        <li class="swiper-slide"><a href="#">6666</a></li>
-                                        <li class="swiper-slide"><a href="#">7777</a></li>
-                                        <li class="swiper-slide"><a href="#">888</a></li>
-                                        <li class="swiper-slide"><a href="#">999</a></li>
-                                        <li class="swiper-slide"><a href="#">10</a></li>
-                                        <li class="swiper-slide"><a href="#">11</a></li>
-                                        <li class="swiper-slide"><a href="#">12</a></li>
-                                    </ul>
-                                </div>
-
-                                <div class="swiper-container-2">
-                                    <div class="swiper-wrapper">
-                                        <div class="swiper-slide">뉴스</div>
-                                        <div class="swiper-slide">내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이
-                                            긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br></div>
-                                        <div class="swiper-slide">스포츠</div>
-                                        <div class="swiper-slide">웹툰뿜</div>
-                                        <div class="swiper-slide">내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이
-                                            긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br></div>
-                                        <div class="swiper-slide">쇼핑 내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br></div>
-                                        <div class="swiper-slide">동영상</div>
-                                        <div class="swiper-slide">리빙푸드</div>
-                                        <div class="swiper-slide">내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이
-                                            긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br></div>
-                                        <div class="swiper-slide">추가메뉴-1</div>
-                                        <div class="swiper-slide">내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이
-                                            긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br></div>
-                                        <div class="swiper-slide">추가메뉴-3</div>
-                                        <div class="swiper-slide">내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이
-                                            긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분
-                                            <br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br>내용이 긴부분<br></div>
-                                    </div>
-                                </div>
-
-                                <link href="../../css/mobiscroll.jquery.min.css" rel="stylesheet" />
-                                <script src="../../js/mobiscroll.jquery.min.js"></script>
                             </div>
                             <div class="exp">
                                 <h3>code pattern</h3>
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
-							</pre>
+                                    
+                                </pre>
                             </div>
                         </section>
                     </article>
@@ -726,55 +671,11 @@
         <script src="../../js/jquery-3.3.1.min.js"></script>
         <script src="../../js/ui.js"></script>
         <!-- <script src="../../js/swiper.js"></script> -->
-        <script src="../../js/swiper.3.3.1.js"></script>
+        <script src="../../js/swiper.js"></script>
         <script src="../plugin/syntaxhighlighter_3.0.83/scripts/shCore.js"></script>
         <script src="../plugin/syntaxhighlighter_3.0.83/scripts/shBrushJScript.js"></script>
         <script src="../plugin/syntaxhighlighter_3.0.83/scripts/shBrushCss.js"></script>
         <script src="../plugin/syntaxhighlighter_3.0.83/scripts/shBrushXml.js"></script>
-        <script>
-            var swiper_1 = new Swiper('.swiper-container', {
-                pagination: '.swiper-pagination',
-                slidesPerView: 5,
-                paginationClickable: true,
-                spaceBetween: 0,
-                freeMode: true,
-                pagination: false
-            });
-
-            $('.tabs > li > a').on('click', function(e) {
-                $(this).parent().addClass('active').siblings().removeClass('active');
-                var tabIdx = $(this).parent().index();
-                swiper_2.slideTo(tabIdx + 1, 300);
-                e.preventDefault();
-            });
-
-            var tabLen = $('.tabs > li').length;
-
-            /* 2016-05-13 수정 */
-            var swiper_2 = new Swiper('.swiper-container-2', {
-                autoHeight: true,
-                slidesPerView: 1,
-                spaceBetween: 0,
-                pagination: false,
-                loop: true,
-                onInit: function(swiper) {
-
-                },
-                onSlideChangeStart: function(swiper) {
-                    var idx = swiper.activeIndex - 1;
-                    if (idx < 0) {
-                        idx = tabLen - 1;
-                    } else if (idx == tabLen) {
-                        idx = 0;
-                    }
-                    $('.tabs > li').removeClass('active').eq(idx).addClass('active');
-                    if (idx < tabLen) {
-                        swiper_1.slideTo(idx - 1, 300);
-                    }
-                }
-            });
-        </script>
-
         <script>
             SyntaxHighlighter.all();
             $(function() {
